# hyprotwin

./: .gitattributes  .gitignore  README.md  accuracies.out  actuator_mode_accuracies.out  actuator_mode_accuracies_opt.out  aggregate_evaluation.py  forecast_input_exp.php  install.sh  plot_timeseries.py
data/heating_12h/: index.txt  (+13 more)
hdt/: .gitattributes  __init__.py  cleaned_cpee_approach.py  config.yaml  cpee_eval_pipeline.py  parameters.py  pipeline.py  remote_util.py  util.py
models/: heating_12h.xml  heating_12h_scenario.xml  irrigation_1y.xml  irrigation_1y_scenario.xml  superprocess.xml  waterlevel_12h.xml  waterlevel_12h_scenario.xml
services/prediction-service/: Cargo.toml  Guide.md  install.sh
services/prediction-service/src/: main.rs
tmp/: final_results_dict_2026-03-12 16:39:40.109150.json  final_results_dict_2026-03-12 16:46:22.932468.json  final_results_dict_2026-03-12 16:46:32.621131.json  final_results_dict_2026-03-12 17:22:34.440974.json  final_results_dict_2026-03-12 17:29:16.586026.json  final_results_dict_2026-03-12 17:29:25.020703.json  final_results_dict_2026-03-1218:02:38.470625.json  final_results_dict_2026-03-14 12:01:55.540004.json  final_results_dict_2026-03-14 12:18:16.375426.json  final_results_dict_2026-03-14 12:20:15.899470.json  final_results_dict_2026-03-14 12:20:17.987321.json  final_results_dict_2026-03-14 20:36:49.058169.json  final_results_dict_2026-03-14 20:41:20.979586.json  final_results_dict_2026-03-14 20:41:27.785614.json  final_results_dict_2026-03-14 20:59:36.099538.json  final_results_dict_2026-03-14 21:04:00.023039.json  (+961 more)
(+71 files in other folders)
