[package]
name = "rust-onnx"
version = "0.1.0"
edition = "2024"
description = "Axum service that exposes a web API to load ONNX models and run inference on them."

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["http2", "macros", "multipart"] }
bytes = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full", "tokio-macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ort = {version =  "=2.0.0-rc.10", features = ["cuda"]}
moka = { version = "0.12.11", features = ["future"] }
reqwest = {  version = "0.12.24" , features = ["json"]}
tower-http = { version = "0.6.7", features = ["map-response-body", "trace"] }
clap = { version = "4.5.53", features = ["derive"] }
clap-serde-derive = "0.2.1"
tower = "0.5.2"
